# litestar-crud

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/application/api/utils/: docs.py  exception_handlers.py
app/application/api/v1/users/: handlers.py  schemas.py
app/domain/entities/: base.py  user.py
app/domain/values/: user.py
app/exceptions/: base.py  domain.py  infrastructure.py
app/infrastructure/adapters/alchemy/: orm.py  type_decorators.py
app/infrastructure/brokers/: factory.py
app/infrastructure/brokers/publishers/: base.py  rabbit.py
app/infrastructure/brokers/publishers/kafka/: base.py  faststream.py
app/infrastructure/brokers/publishers/rabbit/: base.py
app/infrastructure/brokers/schemas/: base.py  users.py
app/infrastructure/repositories/: base.py
app/infrastructure/repositories/users/: alchemy.py  base.py
app/infrastructure/security/: hashing.py
app/infrastructure/services/: user.py
app/infrastructure/uow/: base.py
app/infrastructure/uow/users/: alchemy.py
app/logic/: bootstrap.py  container.py  event_buffer.py  message_bus.py
app/logic/commands/: users.py
app/logic/events/: users.py
app/logic/handlers/users/: base.py  commands.py  events.py
app/settings/configs/: app.py
app/settings/logger/: config.py  formatters.py
migrations/: env.py
migrations/versions/: f1bdb27e55c5_.py
