[tool.poetry]
name = "litestar-crud"
version = "0.1.0"
description = "CRUD app for users"
authors = ["matebookWindows <dan.kovalev2013@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
